# hq-installer

./: .env.example  .gitignore  README.md  design.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.regression.ts
.github/workflows/: ci.yml  e2e.yml  regression.yml  release-macos.yml  release.yml  template-parity.yml
.husky/: pre-commit
__tests__/stories/: US-001.test.tsx  US-002.test.tsx  US-003.test.tsx  US-004.test.tsx  US-006.test.tsx  US-007.test.tsx  US-008.test.tsx  US-009.test.tsx
docs/: architecture.md  dev-codesign.md  hq-install-spec.md
docs/download-page/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
docs/download-page/.vercel/output/: config.json
docs/download-page/.vercel/output/_functions/: _@astrojs-ssr-adapter.mjs  entry.mjs  manifest_myJ3xGUU.mjs
docs/download-page/src/lib/: release.ts
docs/download-page/src/pages/: index.astro
docs/download-page/src/styles/: goclaw-admin-tokens.css  hq-cinematic-keyframes.css  hq-cinematic-tokens.css
e2e/: README.md  cloud-clone.spec.ts  happy-path.spec.ts  missing-deps.spec.ts  tsconfig.json  wdio.conf.ts
e2e/agent-browser/: .gitignore  Cargo.toml
e2e/agent-browser/fixtures/: expected-screens.json
e2e/agent-browser/src/: main.rs
e2e/fixtures/: mock-backends.ts
scripts/: build-local.sh  check-template-parity.sh  dev-codesign.sh  e2e-agent-browser.sh  e2e-installer-handoff.ts  e2e-setup.ts  e2e-teardown.ts  notarize.sh  publish-updater-manifest.ts  setup-dev-codesign.sh  sign-macos.sh  sync-templates.ts
src/: App.test.tsx  App.tsx  index.css  main.tsx  sentry-before-send.test.ts  sentry-before-send.ts  test-setup.ts
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/crates/tauri-plugin-agent-test/: Cargo.toml
src-tauri/crates/tauri-plugin-agent-test/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sentry_scrub.rs
src-tauri/src/commands/: claude_desktop.rs  cloud.rs  deep_link.rs  deps.rs  directory.rs  fs.rs  git.rs  install_menubar.rs  keychain.rs  launch.rs  menubar.rs  mod.rs  oauth.rs  platform.rs  process.rs  scaffold.rs  template.rs  xcode.rs
src-tauri/src/core/: cloud.rs  deps.rs  mod.rs  platform.rs  runner.rs  scaffold.rs
src-tauri/src/core/cloud/: github.rs  s3.rs
src-tauri/templates/hq/: .gitignore  CLAUDE.md  README.md  USER-GUIDE.md
src-tauri/templates/hq/.claude/: settings.json
src-tauri/templates/hq/companies/: manifest.yaml
src-tauri/templates/hq/workers/: registry.yaml
src-tauri/tests/: cloud_test.rs  deps_test.rs  existing_companies_test.rs  git_test.rs  keychain_test.rs  platform_test.rs  process_test.rs  scaffold_test.rs  xcode_test.rs
src/components/: DepStatusRow.tsx  InstallMenubarStep.tsx  ProgressIndicator.tsx  RetroHeader.tsx  ScreenSwitcher.tsx  WizardShell.tsx  depRowState.ts
src/components/__tests__/: ProgressIndicator.test.tsx  WizardShell.test.tsx
src/components/forms/: CustomizationForm.tsx  IdentityForm.tsx  StarterProjectPicker.tsx
src/components/ui/: button.tsx
src/lib/: analytics.ts  cognito.ts  google-oauth.ts  hq-detect.ts  install-manifest.ts  install-state.ts  oauth-github.ts  personalize-writer.ts  s3-sync.ts  tauri-http-handler.ts  tauri-invoke.ts  telemetry.ts  template-fetcher.ts  updater.test.ts  updater.ts  vault-handoff.ts  wizard-router.ts  wizard-state.ts
src/lib/__tests__/: cognito.test.ts  google-oauth.test.ts  hq-detect.test.ts  personalize-writer.test.ts  s3-sync.test.ts  telemetry.test.ts  template-fetcher.test.ts  vault-handoff.test.ts  wizard-router.test.ts  wizard-state.test.ts
src/lib/__tests__/__snapshots__/: personalize-writer.test.ts.snap
src/routes/Install/: DepInstallRow.tsx  LiveLogPanel.tsx  NodeManualModal.tsx  index.tsx
src/routes/Location/: CloudSyncPanel.tsx  OverwriteConfirm.tsx  index.tsx
src/routes/Success/: ConfettiOverlay.tsx  index.tsx
src/routes/Welcome/: BuildingSvg.tsx  SystemScan.tsx  index.tsx
src/screens/: 01-welcome.tsx  02-cognito-auth.tsx  03-team.tsx  04-deps.tsx  05-github-walkthrough.tsx  06-directory.tsx  07-template.tsx  08-git-init.tsx  08b-sync.tsx  09-personalize.tsx  10-indexing.tsx  11-summary.tsx
src/screens/__tests__/: 01-welcome.test.tsx  02-cognito-auth.test.tsx  03-team.test.tsx  04-deps.test.tsx  05-github-walkthrough.test.tsx  06-directory.test.tsx  07-template.test.tsx  08-git-init.test.tsx  09-personalize.test.tsx  10-indexing.test.tsx  11-summary.test.tsx
src/styles/: retro.css
src/types/: handoff.ts
templates/: profile.md.hbs  voice-style.md.hbs
tests/: us024-acceptance.md
tests/e2e/: full-walkthrough.spec.ts
tests/e2e/fixtures/: cognito-mock.ts  github-releases-mock.ts
tests/regression/: allowed-diffs.json  parity.test.ts
(+9 files in other folders)
