[package]
name = "hq-installer"
version = "0.1.0"
description = "HQ native macOS installer"
authors = []
edition = "2021"

[lib]
name = "hq_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
tokio = { version = "1", features = ["process", "io-util", "rt", "rt-multi-thread", "macros", "sync", "fs"] }
include_dir = "0.7"
tempfile = "3"
async-trait = "0.1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
