[package]
name = "hq-installer"
version = "0.1.17"
description = "HQ native macOS installer"
authors = []
edition = "2021"

[lib]
name = "hq_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
which = "6"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["apple-native"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
nix = { version = "0.29", features = ["signal"] }
tauri-plugin-agent-test = { path = "crates/tauri-plugin-agent-test", optional = true }
tauri-plugin-http = "2.5.8"
tauri-plugin-fs = "2"

[features]
# Embeds the agent-browser MCP server (127.0.0.1:9876) for E2E testing.
# Enable with: `cargo tauri dev --features agent-test`
agent-test = ["dep:tauri-plugin-agent-test"]

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

